display products in product overview

--- a/src/app/product-overview/components/product/product.component.html
+++ b/src/app/product-overview/components/product/product.component.html
@@ -1,3 +1,4 @@
-<p>
-  product works!
-</p>
+<div class="product">
+  <img src="{{product.image}}" alt="product image">
+  <p id="product-title">{{product.title}}</p>
+</div>
