display product overview with redux

--- a/src/app/product-overview/components/product-overview/product-overview.component.html
+++ b/src/app/product-overview/components/product-overview/product-overview.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <app-product *ngFor="let product of products"
+  <app-product *ngFor="let product of (products$ | async)"
                   [product]="product">
   </app-product>
 </div>
