implement angular routing and design

--- a/src/app/product-detail/components/product-description/product-description.component.html
+++ b/src/app/product-detail/components/product-description/product-description.component.html
@@ -1,3 +1,12 @@
-<p>
-  product-description works!
-</p>
+<div class="center">
+  <div id="product-details" *ngIf="product$ | async as product">
+    <img id="productImg" src="{{product.image}}" alt="product image">
+    <h2>{{ product.title }}</h2>
+    <h3>Price</h3>
+    <p>{{ product.price}}</p>
+    <h3>Ingredients</h3>
+    <p>{{ product.description }}</p>
+    <button id="confirmation-button"><a [routerLink]="['/confirmation']">Buy Online</a></button>
+  </div>
+  <button id="back-button" (click)="backToProductOverview()">Back to all products</button>
+</div>
