--- a/src/app/confirmation/components/confirmation-info/confirmation-info.component.html
+++ b/src/app/confirmation/components/confirmation-info/confirmation-info.component.html
@@ -1,3 +1,12 @@
-<p>
-  confirmation-info works!
-</p>
+<div class="center">
+  <div id="confirmation-info">
+    <h3>
+      Order confirmed.
+    </h3>
+    <h2>
+      Your ice cream is on its way to you.
+    </h2>
+  </div>
+  <button id="back-button" (click)="backToProductOverview()">Back to all products</button>
+</div>
+
