--- a/src/app/product-overview/components/product-overview/product-overview.component.css
+++ b/src/app/product-overview/components/product-overview/product-overview.component.css
@@ -5,6 +5,35 @@
   grid-template-columns: auto auto auto;
   justify-items: center;
   padding: 50px;
-  margin-left: 500px;
-  margin-right: 500px;
+  padding-top: 100px;
+  margin: auto;
+  width: 50%;
+}
+
+#header-bg {
+  background-color: #ffa500;
+  height: 100%;
+  background-size: cover;
+}
+
+#header-txt {
+  margin: 0;
+  padding-top: 100px;
+  padding-bottom: 30px;
+  text-align: center;
+  color: white;
+  letter-spacing: 0.2em;
+}
+
+h1 {
+  font-size: 65px;
+  font-weight: 100;
+  margin-bottom: 30px;
+  margin-top: 0px;
+}
+
+h2 {
+  font-size: 35px;
+  font-weight: 100;
+  margin-bottom: 0px;
 }
