--- a/src/app/product-overview/components/product-overview/product-overview.component.html
+++ b/src/app/product-overview/components/product-overview/product-overview.component.html
@@ -1,3 +1,10 @@
+<div id=header-bg>
+  <div id=header-txt>
+    <h1>GET YOUR ICE CREAM</h1>
+    <h2>Choose your favorite.</h2>
+  </div>
+</div>
+
 <div class="grid-container">
   <app-product *ngFor="let product of (products$ | async)"
                   [product]="product">
