--- a/src/app/product-overview/components/product/product.component.html
+++ b/src/app/product-overview/components/product/product.component.html
@@ -1,4 +1,6 @@
 <div class="product">
+  <a [routerLink]="['/product', product.id-1]">
   <img src="{{product.image}}" alt="product image">
+  </a>
   <p id="product-title">{{product.title}}</p>
 </div>
