show recommendations in product details with shared product component

--- a/src/app/product-detail/components/product-description/product-description.component.html
+++ b/src/app/product-detail/components/product-description/product-description.component.html
@@ -10,3 +10,5 @@
   </div>
   <button id="back-button" (click)="backToProductOverview()">Back to all products</button>
 </div>
+<app-recommendation></app-recommendation>
+
