--- a/src/app/product-detail/recommendations/components/recommendation/recommendation.component.html
+++ b/src/app/product-detail/recommendations/components/recommendation/recommendation.component.html
@@ -1,3 +1,9 @@
-<p>
-  recommendation works!
-</p>
+<div id="recommandations">
+  <h2>More ice cream</h2>
+  <div class="grid-container">
+    <app-product *ngFor="let product of (products$ | async)"
+                 [product]="product">
+    </app-product>
+  </div>
+</div>
+
