--- a/src/app/shared/components/product/product.component.html
+++ b/src/app/shared/components/product/product.component.html
@@ -1,6 +1,6 @@
 <div class="product">
   <a [routerLink]="['/product', product.id-1]">
-  <img src="{{product.image}}" alt="product image">
+  <img id="product-image" src="{{product.image}}" alt="product image">
   </a>
   <p id="product-title">{{product.title}}</p>
 </div>
