Extract styling interface with :host()

--- a/src/app/product-detail/recommendations/components/recommendation/recommendation.component.css
+++ b/src/app/product-detail/recommendations/components/recommendation/recommendation.component.css
@@ -23,11 +23,7 @@ h2 {
   justify-items: center;
 }
 
-:host >>> app-product #product-title {
-  font-size: 20px;
-}
-
-:host >>> app-product #product-image {
+:host >>> app-product .product-image {
   width: 190px;
   height: 190px;
 }
