--- a/src/app/shared/components/product/product.component.html
+++ b/src/app/shared/components/product/product.component.html
@@ -1,6 +1,6 @@
 <div class="product">
   <a [routerLink]="['/product', product.id-1]">
-  <img id="product-image" src="{{product.image}}" alt="product image">
+  <img class="product-image" src="{{product.image}}" alt="product image">
   </a>
-  <p id="product-title">{{product.title}}</p>
+  <p class="product-title">{{product.title}}</p>
 </div>
