--- a/src/app/shared/components/product/product.component.css
+++ b/src/app/shared/components/product/product.component.css
@@ -10,6 +10,7 @@
   border-style: solid;
   border-width: 2px;
   border-color: #b4b4b4;
+  height: 100%;
 }
 
 .product:hover {
@@ -19,9 +20,15 @@
 .product-title {
   text-align: right;
   padding-right: 20px;
+  padding-left: 20px;
+  overflow:hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
+
 
 .product-image {
   padding-top: 10px;
+  width: 100%;
 }
 
