implement redux for sub-domain recommendations

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -10,4 +10,4 @@
   </div>
   <button class="back-button" (click)="backToProductOverview()">Back to all products</button>
 </div>
-<app-recommendation></app-recommendation>
+<app-recommendations></app-recommendations>
