--- a/src/app/product/recommendations/components/recommendations/recommendations.component.css
+++ b/src/app/product/recommendations/components/recommendations/recommendations.component.css
@@ -2,8 +2,6 @@
   border-style: solid;
   border-width: 2px;
   border-color: #b4b4b4;
-  margin: auto;
-  width: 60%;
   padding: 25px;
 }
 
@@ -12,6 +10,9 @@ h2 {
   font-weight: 100;
   text-transform: uppercase;
   letter-spacing: 0.1em;
+  margin: auto;
+  width: 60%;
+  padding-bottom: 10px;
 }
 
 .grid-container {
@@ -20,4 +21,6 @@ h2 {
   grid-row-gap: 25px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   justify-items: center;
+  margin: auto;
+  width: 60%;
 }
