--- a/src/app/shared/components/product/product.component.html
+++ b/src/app/shared/components/product/product.component.html
@@ -1,5 +1,5 @@
 <div class="product">
-  <a [routerLink]="['/product', product.id-1]">
+  <a (click)="showProduct(product.id-1)">
   <img class="product-image" src="{{product.image}}" alt="product image">
   </a>
     <p class="product-title">{{product.title}}</p>
