--- a/src/app/shared/components/recommendation/recommendation.component.html
+++ b/src/app/shared/components/recommendation/recommendation.component.html
@@ -1,4 +1,4 @@
 <div class="recommendation">
-  <img class="recommendation-image" src="{{recommendation.image}}" alt="recommendation image">
-  <p class="recommendation-title">{{recommendation.title}}</p>
+  <img class="recommendation-image" src="{{recommendation?.image}}" alt="recommendation image">
+  <p class="recommendation-title">{{recommendation?.title}}</p>
 </div>
