Use SCSS instead of CSS

--- a/src/app/product/components/product-master/product-master.component.html
+++ b/src/app/product/components/product-master/product-master.component.html
@@ -1,9 +1,9 @@
-<div class=header-bg>
+<header>
   <div class=header-txt>
     <h1>GET YOUR ICE CREAM</h1>
     <h2>Choose your favorite.</h2>
   </div>
-</div>
+</header>
 
 <div class="grid-container">
   <app-product class="big" *ngFor="let product of (products$ | async)"
