--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -1,6 +1,6 @@
 <div class="center">
   <div class="product-details" *ngIf="product$ | async as product">
-    <img class="productImg" src="{{product.image}}" alt="product image">
+    <img class="product-img" src="{{product.image}}" alt="product image">
     <h2>{{ product.title }}</h2>
     <h3>Price</h3>
     <p>{{ product.price}}</p>
