--- a/src/app/product/components/product-detail/product-detail.component.scss
+++ b/src/app/product/components/product-detail/product-detail.component.scss
@@ -13,20 +13,20 @@
   text-align: left !important;
 }
 
-.productImg {
+.product-img {
   float: left;
 }
 
 h2 {
   font-size: 35px;
   font-weight: 100;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 h3 {
   font-size: 25px;
   font-weight: 100;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   line-height: 0.5;
 }
 
