--- a/src/app/product/components/product-master/product-master.component.scss
+++ b/src/app/product/components/product-master/product-master.component.scss
@@ -1,19 +1,4 @@
-.grid-container {
-  display: grid;
-  grid-column-gap: 50px;
-  grid-row-gap: 50px;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding: 50px;
-  padding-top: 100px;
-  margin: auto;
-  width: 50%;
-}
-
-app-product {
-  min-width: 0;
-}
-
-.header-bg {
+header {
   background-color: #ffa500;
   height: 100%;
   background-size: cover;
@@ -32,11 +17,25 @@ h1 {
   font-size: 65px;
   font-weight: 100;
   margin-bottom: 30px;
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 h2 {
   font-size: 35px;
   font-weight: 100;
-  margin-bottom: 0px;
+  margin-bottom: 0;
+}
+
+.grid-container {
+  display: grid;
+  grid-column-gap: 50px;
+  grid-row-gap: 50px;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 100px 50px 50px;
+  margin: auto;
+  width: 50%;
+}
+
+app-product {
+  min-width: 0;
 }
