--- a/src/app/product/components/product-master/product-master.component.scss
+++ b/src/app/product/components/product-master/product-master.component.scss
@@ -30,10 +30,16 @@ h2 {
   display: grid;
   grid-column-gap: 50px;
   grid-row-gap: 50px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   padding: 100px 50px 50px;
   margin: auto;
   width: 50%;
+}
+
+@media (min-width: 768px) {
+  .grid-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 app-product {
