Initially format project using prettier

--- a/src/app/shared/components/product/product.component.html
+++ b/src/app/shared/components/product/product.component.html
@@ -1,4 +1,9 @@
 <div class="product">
-  <img class="product-image" src="{{product?.image}}" alt="product image" (click)="imageClicked()">
-    <p class="product-title">{{product?.title}}</p>
+  <img
+    class="product-image"
+    src="{{ product?.image }}"
+    alt="product image"
+    (click)="imageClicked()"
+  />
+  <p class="product-title">{{ product?.title }}</p>
 </div>
