--- a/src/app/catalog/product/components/product-detail/product-detail.component.html
+++ b/src/app/catalog/product/components/product-detail/product-detail.component.html
@@ -1,9 +1,9 @@
 <div class="center">
   <div class="product-details" *ngIf="product$ | async as product">
-    <img class="product-img" src="{{product.image}}" alt="product image">
+    <img class="product-img" src="{{ product.image }}" alt="product image" />
     <h2>{{ product.title }}</h2>
     <h3>Price</h3>
-    <p>{{ product.price}}</p>
+    <p>{{ product.price }}</p>
     <h3>Ingredients</h3>
     <p>{{ product.description }}</p>
     <button class="confirmation-button"><a (click)="showConfirmation()">Buy Online</a></button>
