--- a/src/app/catalog/product/components/product-master/product-master.component.html
+++ b/src/app/catalog/product/components/product-master/product-master.component.html
@@ -1,12 +1,16 @@
 <header>
-  <div class=header-txt>
+  <div class="header-txt">
     <h1>GET YOUR ICE CREAM</h1>
     <h2>Choose your favorite.</h2>
   </div>
 </header>
 
 <div class="grid-container">
-  <app-product class="big" *ngFor="let product of (products$ | async)"
-               [product]="product" (productImageClicked)="loadProductDetails(product.id)">
+  <app-product
+    class="big"
+    *ngFor="let product of products$ | async"
+    [product]="product"
+    (productImageClicked)="loadProductDetails(product.id)"
+  >
   </app-product>
 </div>
