--- a/src/app/catalog/recommendation/components/recommendations/recommendations.component.html
+++ b/src/app/catalog/recommendation/components/recommendations/recommendations.component.html
@@ -1,9 +1,10 @@
 <div class="recommendations">
   <h2>More ice cream</h2>
   <div class="grid-container">
-    <app-recommendation *ngFor="let recommendation of (recommendations$ | async)"
-                 [recommendation]="recommendation">
+    <app-recommendation
+      *ngFor="let recommendation of recommendations$ | async"
+      [recommendation]="recommendation"
+    >
     </app-recommendation>
   </div>
 </div>
-
