--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
-html, body {
-  font-family: 'Roboto Condensed' , sans-serif;
+html,
+body {
+  font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
   padding: 0;
 }
