--- a/src/app/catalog/recommendation/components/recommendations/recommendations.component.scss
+++ b/src/app/catalog/recommendation/components/recommendations/recommendations.component.scss
@@ -17,8 +17,7 @@ h2 {
 
 .grid-container {
   display: grid;
-  grid-column-gap: 25px;
-  grid-row-gap: 25px;
+  grid-gap: 25px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   justify-items: center;
   margin: auto;
