--- a/src/app/order/components/order-confirmation/order-confirmation.component.css
+++ b/src/app/order/components/order-confirmation/order-confirmation.component.css
@@ -1,10 +1,9 @@
 .center {
-  margin: auto;
   width: 50%;
   padding: 10px;
   text-align: center;
-  color: white;
-  margin-top: 100px;
+  color: #fff;
+  margin: 100px auto auto;
 }
 
 h2 {
@@ -16,7 +15,7 @@ h2 {
 h3 {
   font-size: 25px;
   font-weight: 100;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   line-height: 50%;
 }
 
