--- a/src/app/catalog/recommendation/components/recommendations/recommendations.component.scss
+++ b/src/app/catalog/recommendation/components/recommendations/recommendations.component.scss
@@ -1,7 +1,7 @@
 .recommendations {
   border-style: solid;
   border-width: 2px;
-  border-color: #b4b4b4;
+  border-color: var(--color-border-product);
   padding: 25px;
 }
 
