--- a/src/app/shared/components/recommendation/recommendation.component.scss
+++ b/src/app/shared/components/recommendation/recommendation.component.scss
@@ -1,7 +1,7 @@
-.recommendation {
+:host {
   border-style: solid;
   border-width: 2px;
-  border-color: #b4b4b4;
+  border-color: var(--color-border-product);
   height: 100%;
 }
 
