--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import './support/themes/dark-theme';
+@import './support/themes/light-theme';
+
 html,
 body {
   font-family: 'Roboto Condensed', sans-serif;
