--- a/src/app/shared/components/product/product.component.scss
+++ b/src/app/shared/components/product/product.component.scss
@@ -13,12 +13,12 @@ img {
 .product {
   border-style: solid;
   border-width: 2px;
-  border-color: #b4b4b4;
+  border-color: var(--color-border-product);
   height: 100%;
-}
 
-.product:hover {
-  border-color: #ffa500;
+  &:hover {
+    border-color: var(--color-border-product-hover);
+  }
 }
 
 .product-title {
