--- a/src/app/catalog/product/components/product-master/product-master.component.scss
+++ b/src/app/catalog/product/components/product-master/product-master.component.scss
@@ -1,5 +1,5 @@
 header {
-  background-color: var(--color-header-background);
+  background-color: var(--color-highlight);
   height: 100%;
   background-size: cover;
 }
