--- a/src/support/themes/light-theme.scss
+++ b/src/support/themes/light-theme.scss
@@ -3,12 +3,17 @@
 html,
 body {
   &.light-theme {
+    /* Background */
+    --color-background: #{colors.$color-white};
+
+    --color-highlight: #{colors.$color-orange};
+
     --color-border-product: #{colors.$color-nobel};
     --color-border-product-hover: #{colors.$color-orange};
     --color-border-button: #{colors.$color-orange};
-    --color-header-background: #{colors.$color-orange};
+
+    /* Text */
     --color-header-text: #{colors.$color-white};
-    --color-content-background: #{colors.$color-white};
     --color-content-text: #{colors.$color-black};
   }
 }
