--- a/src/app/shared/components/recommendation/recommendation.component.scss
+++ b/src/app/shared/components/recommendation/recommendation.component.scss
@@ -1,7 +1,7 @@
 :host {
   border-style: solid;
   border-width: 2px;
-  border-color: var(--color-border-product);
+  border-color: var(--color-secondary);
   height: 100%;
 }
 
