--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-@import './support/themes/dark-theme';
-@import './support/themes/light-theme';
+@import 'src/support/styling/dark-theme';
+@import 'src/support/styling/light-theme';
 
 html,
 body {
