--- a/src/app/order/components/order-confirmation/order-confirmation.component.scss
+++ b/src/app/order/components/order-confirmation/order-confirmation.component.scss
@@ -1,3 +1,5 @@
+@use '../../../../support/styling/common-styles' as common;
+
 .center {
   width: 50%;
   padding: 10px;
@@ -21,14 +23,11 @@ h3 {
 
 #back-button {
   margin: 50px;
-  border: 3px solid var(--color-border-button);
-  padding: 15px 32px;
-  font-size: 20px;
-  cursor: pointer;
-  background-color: transparent;
+  @include common.button-secondary;
 }
 
 #confirmation-info {
-  background-color: #ffa500;
+  background-color: var(--color-highlight);
+  color: var(--color-highlight-text);
   padding: 20px;
 }
