Style dark theme.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,8 @@
 html,
 body {
   font-family: 'Roboto Condensed', sans-serif;
+  color: var(--color-content-text);
+  background-color: var(--color-background);
   margin: 0;
   padding: 0;
 }
