--- a/src/app/catalog/product/components/product-detail/product-detail.component.scss
+++ b/src/app/catalog/product/components/product-detail/product-detail.component.scss
@@ -7,35 +7,31 @@
 }
 
 .product-details {
-  border-style: solid;
-  border-width: 2px;
-  border-color: var(--color-secondary);
-  padding-left: 100px;
+  border: 2px solid var(--color-secondary);
   text-align: left !important;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 50px;
 
   h2 {
     font-size: 35px;
     font-weight: 100;
-    margin-bottom: 0;
   }
 
   h3 {
     font-size: 25px;
     font-weight: 100;
-    margin-bottom: 0;
-    line-height: 0.5;
+    margin: 0 0 8px 0;
   }
 
   p {
     font-size: 20px;
+    margin: 0 0 18px 0;
   }
 }
 
-.product-img {
-  float: left;
-}
-
 .confirmation-button {
+  margin-bottom: 50px;
   @include common.button-primary;
 }
 
