--- a/src/app/catalog/recommendation/components/recommendations/recommendations.component.scss
+++ b/src/app/catalog/recommendation/components/recommendations/recommendations.component.scss
@@ -1,7 +1,5 @@
 .recommendations {
-  border-style: solid;
-  border-width: 2px;
-  border-color: var(--color-secondary);
+  border-top: 2px solid var(--color-secondary);
   padding: 25px;
 }
 
