--- a/src/support/styling/colors.scss
+++ b/src/support/styling/colors.scss
@@ -4,4 +4,4 @@ $color-black: #000000;
 $color-orange: #ffa500;
 $color-orange-light: #fac984;
 $color-nobel: #b4b4b4;
-$color-dark-gray: #363636;
+$color-dark-gray: #1f1f1f;
