Add theme switcher and improve styling.

--- a/src/app/catalog/product/components/product-master/product-master.component.html
+++ b/src/app/catalog/product/components/product-master/product-master.component.html
@@ -3,6 +3,8 @@
   <h2>Choose your favorite.</h2>
 </header>
 
+<app-theme-switcher></app-theme-switcher>
+
 <div class="grid-container">
   <app-product
     class="big"
