implement theme switch by icon

--- a/src/app/shared/components/theme/theme-switcher.component.html
+++ b/src/app/shared/components/theme/theme-switcher.component.html
@@ -1,2 +1,4 @@
-<label for="switcher">Dark theme</label>
-<input id="switcher" type="checkbox" (click)="switcherClicked()" [checked]="theme === 'dark'" />
+<button class="theme-switcher" [ngSwitch]="theme" (click)="switcherClicked()">
+  <fa-icon *ngSwitchCase="'light'" [icon]="faMoon"></fa-icon>
+  <fa-icon *ngSwitchCase="'dark'" [icon]="faSun"></fa-icon>
+</button>
