--- a/src/app/shared/components/product/product.component.html
+++ b/src/app/shared/components/product/product.component.html
@@ -1,9 +1,4 @@
-<div class="product">
-  <img
-    class="product-image"
-    src="{{ product?.image }}"
-    alt="product image"
-    (click)="imageClicked()"
-  />
+<div class="product" (click)="imageClicked()">
+  <img class="product-image" src="{{ product?.image }}" alt="product image" />
   <p class="product-title">{{ product?.title }}</p>
 </div>
