Add copyright headers to sources

--- a/src/app/catalog/recommendation/components/recommendations/recommendations.component.html
+++ b/src/app/catalog/recommendation/components/recommendations/recommendations.component.html
@@ -1,3 +1,8 @@
+<!--
+  ~ SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+  ~ SPDX-License-Identifier: MIT
+  -->
+
 <div class="recommendations">
   <h2>More ice cream</h2>
   <div class="grid-container">
