--- a/src/app/catalog/recommendation/components/recommendations/recommendations.component.scss
+++ b/src/app/catalog/recommendation/components/recommendations/recommendations.component.scss
@@ -1,3 +1,8 @@
+/*!
+ * SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+ * SPDX-License-Identifier: MIT
+ */
+
 .recommendations {
   border-style: solid;
   border-width: 2px;
