--- a/src/app/order/components/order-confirmation/order-confirmation.component.html
+++ b/src/app/order/components/order-confirmation/order-confirmation.component.html
@@ -1,3 +1,8 @@
+<!--
+  ~ SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+  ~ SPDX-License-Identifier: MIT
+  -->
+
 <div class="center">
   <div id="confirmation-info">
     <h3>Order confirmed.</h3>
