--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<!--
+  ~ SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+  ~ SPDX-License-Identifier: MIT
+  -->
+
 <router-outlet></router-outlet>
