--- a/src/app/catalog/product/components/product-detail/product-detail.component.html
+++ b/src/app/catalog/product/components/product-detail/product-detail.component.html
@@ -1,3 +1,8 @@
+<!--
+  ~ SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+  ~ SPDX-License-Identifier: MIT
+  -->
+
 <div class="center">
   <div class="product-details" *ngIf="product$ | async as product">
     <img class="product-img" src="{{ product.image }}" alt="product image" />
