--- a/src/app/catalog/product/components/product-master/product-master.component.html
+++ b/src/app/catalog/product/components/product-master/product-master.component.html
@@ -1,3 +1,8 @@
+<!--
+  ~ SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+  ~ SPDX-License-Identifier: MIT
+  -->
+
 <header>
   <div class="header-txt">
     <h1>GET YOUR ICE CREAM</h1>
