--- a/src/app/catalog/product/components/product-master/product-master.component.scss
+++ b/src/app/catalog/product/components/product-master/product-master.component.scss
@@ -1,3 +1,8 @@
+/*!
+ * SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+ * SPDX-License-Identifier: MIT
+ */
+
 header {
   background-color: #ffa500;
   height: 100%;
