--- a/src/app/order/components/order-confirmation/order-confirmation.component.css
+++ b/src/app/order/components/order-confirmation/order-confirmation.component.css
@@ -1,3 +1,8 @@
+/*
+ * SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+ * SPDX-License-Identifier: MIT
+ */
+
 .center {
   width: 50%;
   padding: 10px;
