--- a/src/app/shared/components/product/product.component.scss
+++ b/src/app/shared/components/product/product.component.scss
@@ -1,3 +1,8 @@
+/*!
+ * SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+ * SPDX-License-Identifier: MIT
+ */
+
 :host(.small) {
   font-size: 20px;
 }
