--- a/src/app/shared/components/recommendation/recommendation.component.html
+++ b/src/app/shared/components/recommendation/recommendation.component.html
@@ -1,3 +1,8 @@
+<!--
+  ~ SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+  ~ SPDX-License-Identifier: MIT
+  -->
+
 <div class="recommendation">
   <img class="recommendation-image" src="{{ recommendation?.image }}" alt="recommendation image" />
   <p class="recommendation-title">{{ recommendation?.title }}</p>
