--- a/src/app/shared/components/recommendation/recommendation.component.scss
+++ b/src/app/shared/components/recommendation/recommendation.component.scss
@@ -1,3 +1,8 @@
+/*!
+ * SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+ * SPDX-License-Identifier: MIT
+ */
+
 .recommendation {
   border-style: solid;
   border-width: 2px;
