--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+/*!
+ * SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
+ * SPDX-License-Identifier: MIT
+ */
+
 html,
 body {
   font-family: 'Roboto Condensed', sans-serif;
