fix icons for theme-switcher not visible

--- a/src/app/shared/components/theme/theme-switcher.component.html
+++ b/src/app/shared/components/theme/theme-switcher.component.html
@@ -1,4 +1,4 @@
 <button class="theme-switcher" [ngSwitch]="theme" (click)="switcherClicked()">
-  <fa-icon *ngSwitchCase="'light'" [icon]="faMoon"></fa-icon>
-  <fa-icon *ngSwitchCase="'dark'" [icon]="faSun"></fa-icon>
+  <fa-icon *ngSwitchCase="'light-theme'" [icon]="faMoon"></fa-icon>
+  <fa-icon *ngSwitchCase="'dark-theme'" [icon]="faSun"></fa-icon>
 </button>
