Fix stylelint issues

--- a/src/support/styling/colors.scss
+++ b/src/support/styling/colors.scss
@@ -1,6 +1,6 @@
 /* White */
-$color-white: #ffffff;
-$color-black: #000000;
+$color-white: #fff;
+$color-black: #000;
 $color-orange: #ffa500;
 $color-orange-light: #fac984;
 $color-nobel: #b4b4b4;
