--- a/src/app/catalog/product/components/product-detail/product-detail.component.scss
+++ b/src/app/catalog/product/components/product-detail/product-detail.component.scss
@@ -26,12 +26,12 @@
   h3 {
     font-size: 25px;
     font-weight: 100;
-    margin: 0 0 8px 0;
+    margin: 0 0 8px;
   }
 
   p {
     font-size: 20px;
-    margin: 0 0 18px 0;
+    margin: 0 0 18px;
   }
 }
 
