adding bootstrap grid (product grid & recommendations grid)

--- a/src/app/catalog/product/components/product-detail/product-detail.component.html
+++ b/src/app/catalog/product/components/product-detail/product-detail.component.html
@@ -17,4 +17,4 @@
   </div>
   <button class="back-button" (click)="backToProductOverview()">Back to all products</button>
 </div>
-<app-recommendations></app-recommendations>
+<app-recommendations class="container"></app-recommendations>
