--- a/src/app/catalog/recommendation/components/recommendations/recommendations.component.html
+++ b/src/app/catalog/recommendation/components/recommendations/recommendations.component.html
@@ -5,11 +5,14 @@
 
 <div class="recommendations">
   <h2>More ice cream</h2>
-  <div class="grid-container">
-    <app-recommendation
-      *ngFor="let recommendation of recommendations$ | async"
-      [recommendation]="recommendation"
-    >
-    </app-recommendation>
+  <div class="container">
+    <div class="row">
+      <app-recommendation
+        class="col-md-4 col-sm-6 col-12"
+        *ngFor="let recommendation of recommendations$ | async"
+        [recommendation]="recommendation"
+      >
+      </app-recommendation>
+    </div>
   </div>
 </div>
