--- a/src/app/catalog/product/components/product-detail/product-detail.component.html
+++ b/src/app/catalog/product/components/product-detail/product-detail.component.html
@@ -19,4 +19,4 @@
     <button class="back-button" (click)="backToProductOverview()">Back to all products</button>
   </div>
 </div>
-<app-recommendations class="container"></app-recommendations>
+<app-recommendations></app-recommendations>
