adding bootstrap to order confirmation

--- a/src/app/catalog/product/components/product-master/product-master.component.scss
+++ b/src/app/catalog/product/components/product-master/product-master.component.scss
@@ -11,6 +11,7 @@ header {
   align-items: center;
   color: var(--color-highlight-text);
   letter-spacing: 0.2em;
+  padding: 20px;
 
   h1 {
     font-size: 65px;
