--- a/src/app/order/components/order-confirmation/order-confirmation.component.html
+++ b/src/app/order/components/order-confirmation/order-confirmation.component.html
@@ -3,10 +3,12 @@
   ~ SPDX-License-Identifier: MIT
   -->
 
-<div class="center">
-  <div id="confirmation-info">
-    <h3>Order confirmed.</h3>
-    <h2>Your ice cream is on its way to you.</h2>
+<div class="container">
+  <div class="row">
+    <div id="confirmation-info">
+      <h3>Order confirmed.</h3>
+      <h2>Your ice cream is on its way to you.</h2>
+    </div>
+    <button id="back-button" (click)="backToProductOverview()">Back to all products</button>
   </div>
-  <button id="back-button" (click)="backToProductOverview()">Back to all products</button>
 </div>
