--- a/src/app/order/components/order-confirmation/order-confirmation.component.scss
+++ b/src/app/order/components/order-confirmation/order-confirmation.component.scss
@@ -5,32 +5,27 @@
 
 @use '../../../../support/styling/common-styles' as common;
 
-.center {
-  width: 50%;
-  padding: 10px;
-  text-align: center;
-  color: var(--color-header-text);
-  margin: 100px auto auto;
-}
+div.container {
+  width: auto;
+  h2 {
+    font-size: 35px;
+    font-weight: 100;
+  }
 
-h2 {
-  font-size: 35px;
-  font-weight: 100;
-}
+  h3 {
+    font-size: 25px;
+    font-weight: 100;
+    margin-bottom: 0;
+  }
 
-h3 {
-  font-size: 25px;
-  font-weight: 100;
-  margin-bottom: 0;
-}
+  #back-button {
+    margin: 25px 0;
+    @include common.button-secondary;
+  }
 
-#back-button {
-  margin: 50px;
-  @include common.button-secondary;
-}
-
-#confirmation-info {
-  background-color: var(--color-highlight);
-  color: var(--color-highlight-text);
-  padding: 20px;
+  #confirmation-info {
+    background-color: var(--color-highlight);
+    color: var(--color-highlight-text);
+    padding: 20px;
+  }
 }
