adding SPDX headers to source code

--- a/src/app/shared/components/theme/theme-switcher.component.html
+++ b/src/app/shared/components/theme/theme-switcher.component.html
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2022 Carl Zeiss AG
+
+SPDX-License-Identifier: MIT
+-->
+
 <button class="theme-switcher" [ngSwitch]="theme" (click)="switcherClicked()">
   <fa-icon *ngSwitchCase="'light-theme'" [icon]="faMoon"></fa-icon>
   <fa-icon *ngSwitchCase="'dark-theme'" [icon]="faSun"></fa-icon>
