--- a/src/app/shared/components/theme/theme-switcher.component.scss
+++ b/src/app/shared/components/theme/theme-switcher.component.scss
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2022 Carl Zeiss AG
+ *
+ * SPDX-License-Identifier: MIT
+ */
+
 .theme-switcher {
   border: 0;
   background-color: transparent;
