--- a/src/support/styling/colors.scss
+++ b/src/support/styling/colors.scss
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2022 Carl Zeiss AG
+ *
+ * SPDX-License-Identifier: MIT
+ */
+
 /* White */
 $color-white: #fff;
 $color-black: #000;
