--- a/src/support/styling/common-styles.scss
+++ b/src/support/styling/common-styles.scss
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2022 Carl Zeiss AG
+ *
+ * SPDX-License-Identifier: MIT
+ */
+
 @mixin button {
   padding: 15px 32px;
   font-size: 20px;
