Change number of funnels to number of items.

--- a/src/app/catalog/product/components/product-detail/product-detail.component.html
+++ b/src/app/catalog/product/components/product-detail/product-detail.component.html
@@ -15,7 +15,7 @@
         <p>{{ product.price }}</p>
 
         <div>
-          <h3>Number of funnels</h3>
+          <h3>Number of items</h3>
           <button class="confirmation-button" (click)="decreaseProductNumber()">-</button>
           {{ productNumber() }}
           <button class="confirmation-button" (click)="increseProductNumber()">+</button>
