CFWEB-122-Signal-store,Shopping Cart Feature * adding new Ngrx Signal Store functionality * adding shopping cart * extending order confirmation route with route params * setting product price to number * fixing theme handling bug after page refresh * fixing layout, same header style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   ~ SPDX-FileCopyrightText: (c) 2022 Carl Zeiss AG
   ~ SPDX-License-Identifier: MIT
   -->
-
+<app-shopping-cart></app-shopping-cart>
 <router-outlet></router-outlet>
