--- a/src/app/catalog/product/components/product-detail/product-detail.component.html
+++ b/src/app/catalog/product/components/product-detail/product-detail.component.html
@@ -3,6 +3,11 @@
   ~ SPDX-License-Identifier: MIT
   -->
 
+<header *ngIf="product$ | async as product">
+  <app-theme-switcher></app-theme-switcher>
+  <h1>{{ product.title }}</h1>
+</header>
+
 <div class="container">
   <div class="row">
     <div class="product-details" *ngIf="product$ | async as product">
@@ -12,19 +17,22 @@
         <h2>{{ product.title }}</h2>
 
         <h3>Price</h3>
-        <p>{{ product.price }}</p>
+        <p>{{ product.price }} €</p>
 
         <div>
           <h3>Number of items</h3>
-          <button class="confirmation-button" (click)="decreaseProductNumber()">-</button>
+          <button class="counter-button" (click)="decreaseProductNumber()">-</button>
           {{ productNumber() }}
-          <button class="confirmation-button" (click)="increseProductNumber()">+</button>
+          <button class="counter-button" (click)="increseProductNumber()">+</button>
         </div>
 
         <h3>Ingredients</h3>
         <p>{{ product.description }}</p>
 
-        <button class="confirmation-button" (click)="showConfirmation()">Buy Online</button>
+        <div class="button-container">
+          <button (click)="showConfirmation()">Buy Online</button>
+          <button (click)="addToCart()">Add to cart</button>
+        </div>
       </div>
     </div>
     <button class="back-button" (click)="backToProductOverview()">Back to all products</button>
