--- a/src/app/catalog/product/components/product-master/product-master.component.scss
+++ b/src/app/catalog/product/components/product-master/product-master.component.scss
@@ -3,30 +3,10 @@
  * SPDX-License-Identifier: MIT
  */
 
+@use '../../../../../support/styling/common-styles' as common;
+
 header {
-  background-color: var(--color-highlight);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: var(--color-highlight-text);
-  letter-spacing: 0.2em;
-  padding: 20px;
-
-  h1 {
-    font-size: 65px;
-    font-weight: 100;
-    margin: 30px 0;
-  }
-
-  h2 {
-    font-size: 35px;
-    font-weight: 100;
-  }
-}
-
-app-theme-switcher {
-  align-self: end;
+  @include common.header-style;
 }
 
 div.container {
