--- a/src/app/catalog/product/components/product-detail/product-detail.component.html
+++ b/src/app/catalog/product/components/product-detail/product-detail.component.html
@@ -5,29 +5,31 @@
 
 <div class="container">
   <div class="row">
-    <div class="product-details" *ngIf="product$ | async as product">
-      <img class="product-img" src="{{ product.image }}" alt="product image" />
+    @if (product$ | async; as product) {
+      <div class="product-details">
+        <img class="product-img" src="{{ product.image }}" alt="product image" />
 
-      <div class="product-description">
-        <h2>{{ product.title }}</h2>
+        <div class="product-description">
+          <h2>{{ product.title }}</h2>
 
-        <h3>Price</h3>
-        <p>{{ product.price }}</p>
+          <h3>Price</h3>
+          <p>{{ product.price }}</p>
 
-        <div>
-          <h3>Number of items</h3>
-          <button class="confirmation-button" (click)="decreaseProductNumber()">-</button>
-          {{ productNumber() }}
-          <button class="confirmation-button" (click)="increseProductNumber()">+</button>
+          <div>
+            <h3>Number of items</h3>
+            <button class="confirmation-button" (click)="decreaseProductNumber()">-</button>
+            {{ productNumber() }}
+            <button class="confirmation-button" (click)="increseProductNumber()">+</button>
+          </div>
+
+          <h3>Ingredients</h3>
+          <p>{{ product.description }}</p>
+
+          <button class="confirmation-button" (click)="showConfirmation()">Buy Online</button>
         </div>
-
-        <h3>Ingredients</h3>
-        <p>{{ product.description }}</p>
-
-        <button class="confirmation-button" (click)="showConfirmation()">Buy Online</button>
       </div>
-    </div>
-    <button class="back-button" (click)="backToProductOverview()">Back to all products</button>
+      <button class="back-button" (click)="backToProductOverview()">Back to all products</button>
+    }
   </div>
 </div>
 <app-recommendations></app-recommendations>
